src/test/testCases/semanticErrors/noStates.moore
moore M1 {
    states {}

    input {
        pins {
            clock:  10
        }

        transition {}
    }

    output {
        pins {}

        function {}
    }
}
